# opal-connector

./: .gitignore  Cargo.toml  README.md
.cargo/: config
experimental/: data_collector.bash
man/: ronn-gen.sh  xornet-reporter.1  xornet-reporter.1.ronn
scripts/: install.sh  opal-connector.json  uninstall.sh  update-mipsel.sh
src/: arg_parser.rs  auth_manager.rs  config_manager.rs  main.rs  reporter.rs  util.rs  websocket_manager.rs
src/data_collector/: cpu.rs  disks.rs  geolocation.rs  gpu.rs  mod.rs  nics.rs  ram.rs  temps.rs  uptimes.rs
src/types/: mod.rs
