[package]
name = "xornet-reporter"
version = "0.17.3"
edition = "2018"

# Optimize for size
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[scripts]
run = "cargo watch -x run"

[dependencies]
# Information
serde_json = "1.0.72"
serde = { features = ["derive"], version = "1.0.130" }
sysinfo = "0.22.4"
nvml-wrapper = "0.7.0"
parking_lot = "0.11.2"
anyhow = "1.0.51"
thiserror = "1.0.30"
websocket = "0.26.2"
native-tls = "0.2.8"
reqwest = { version = "0.11.7", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

# User interface
colored = "2.0.0"

[target.'cfg(unix)'.build-dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }

# For data collection that supercedes sysinfo crate functions on Windows
[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance"
]
